--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Shoes</title>
 </head>
@@ -11,16 +14,19 @@
   <section id="first-section" class="section">
     <div class="container">
       <img src="./assets/img/01.png" alt="">
+      <p class="text">IL NOSTRO MODELLO DI PUNTA</p>
     </div>
   </section>
   <section id="second-section" class="section">
     <div class="container">
       <img src="./assets/img/02.png" alt="">
+      <P class="text">IL NOSTRO MODELLO DI PUNTA</P>
     </div>
   </section>
   <section id="third-section" class="section">
     <div class="container">
       <img src="./assets/img/03.png" alt="">
+      <P class="text">IL NOSTRO MODELLO DI PUNTA</P>
     </div>
   </section>
 </body>
