--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <title>Shoes</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#first-section">1</a></li>
-      <li><a href="#second-section">2</a></li>
-      <li><a href="#third-section">3</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#first-section">1</a></li>
+        <li><a href="#second-section">2</a></li>
+        <li><a href="#third-section">3</a></li>
+      </ul>
+    </nav>
+  </header>
   <section id="first-section" class="section">
     <div class="container">
       <img src="./assets/img/01.png" alt="">
